# binkaenc

./: CMakeLists.txt  CMakeSettings.json  README.md  build.bat  dummy.binka  large_noise.binka  noise.binka
Include/: binka_ue_encode.h  binka_ue_file_header.h
Src/: binka_encode_main.cpp  binka_ue_encode.cpp  binkace.h
